Fixing new buttons structure, including on small screens

--- a/lswc.css
+++ b/lswc.css
@@ -246,7 +246,8 @@ form.variations_form.cart .single_variation_wrap {
 
 
 /* == MAKE BUTTONS - ALL == */
-.table.variations .tbody .value.td > div {
+.table.variations .tbody .value.td > div, 
+.table.variations .tbody .value-buttons.td > div {
 	border: 1px solid #555;
 	background-color: #141414;
 	border-radius: 5px;
@@ -256,15 +257,18 @@ form.variations_form.cart .single_variation_wrap {
 	cursor: pointer;
 	text-align: center;
 }
-.table.variations .tbody .value.td > div:hover {
+.table.variations .tbody .value.td > div:hover, 
+.table.variations .tbody .value-buttons.td.td > div:hover {
     border: 1px solid #888;
     background-color: #333;
 }
 .value.td > div > input[type='radio'], 
+.value-buttons.td > div > input[type='radio'], 
 .value.td > .each-attrib > div > input[type='radio'] {
     display: none;
 }
-.value.td > div > label {
+.value.td > div > label, 
+.value-buttons.td > div > label {
 	cursor: pointer;
 	display: block;
 	padding: 8px;
@@ -292,7 +296,8 @@ form.variations_form.cart .single_variation_wrap {
 .table.variations .tbody .value.td .each-attrib {
   padding: 5px;
 }
-.table.variations .tbody .value.td .each-attrib .value.td {
+.table.variations .tbody .value.td .each-attrib .value.td, 
+.table.variations .tbody .value.td .each-attrib .value-buttons.td {
 	  width: 100%;
 }
 .table.variations .tbody .value.td .each-attrib:nth-child(even) {
@@ -325,7 +330,8 @@ form.variations_form.cart .single_variation_wrap {
 	}
 }
 @media (max-width:559px){
-	.table.variations .tbody .value.td > div {
+	.table.variations .tbody .value.td > div, 
+	.table.variations .tbody .value-buttons.td > div {
 	  width: calc(100% - 16px) !important;
 	}
 }
